compile_log.txt
    Checking ark-0-zheng v0.1.0 (C:\Users\Stran\.gemini\antigravity\scratch\ark-compiler-prime\core)
error[E0432]: unresolved import `wasm`
  --> core\src\lib.rs:33:9
   |
33 | pub use wasm::*;
   |         ^^^^ use of unresolved module or unlinked crate `wasm`
   |
help: to make use of source file core\src\wasm.rs, use `mod wasm` in this file to declare the module
   |
19 + mod wasm;
   |

warning: unused imports: `Deserialize` and `Serialize`
 --> core\src\bytecode.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::ast::FunctionDef`
  --> core\src\runtime.rs:19:5
   |
19 | use crate::ast::FunctionDef;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0609]: no field `name` on type `&Rc<Chunk>`
   --> core\src\intrinsics.rs:425:57
    |
425 |         Value::Function(f) => print!("<Function:{}>", f.name),
    |                                                         ^^^^ unknown field
    |
    = note: available fields are: `code`, `constants`

Some errors have detailed explanations: E0432, E0609.
For more information about an error, try `rustc --explain E0432`.
warning: `ark-0-zheng` (lib) generated 2 warnings
error: could not compile `ark-0-zheng` (lib) due to 2 previous errors; 2 warnings emitted
